--- a/Views/ImageProcessorView.xaml
+++ b/Views/ImageProcessorView.xaml
@@ -10,7 +10,57 @@
             <ColumnDefinition Width="2*" />
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        
+
+        <!-- Left Column: Images -->
+        <StackPanel Grid.Column="0" Margin="10" VerticalAlignment="Stretch">
+            <GroupBox Header="Selected Image" Margin="0,0,0,10">
+                <Image Height="250" Stretch="Uniform" Source="{Binding SelectedImage}" />
+            </GroupBox>
+            <GroupBox Header="Live Preview" Margin="0,0,0,10">
+                <Image Height="250" Stretch="Uniform" Source="{Binding LivePreview}" />
+            </GroupBox>
+        </StackPanel>
+
+        <!-- Right Column: Controls -->
+        <StackPanel Grid.Column="1" Margin="10" VerticalAlignment="Top" HorizontalAlignment="Stretch">
+
+            <!-- Processing Mode -->
+            <GroupBox Header="Processing Mode" Margin="0,0,0,10">
+                <StackPanel Orientation="Vertical" Margin="5">
+                    <RadioButton Content="CPU" GroupName="ProcessingMode" IsChecked="{Binding IsCpuMode, Mode=TwoWay}" />
+                    <RadioButton Content="CUDA" GroupName="ProcessingMode" IsChecked="{Binding IsCudaMode, Mode=TwoWay}" />
+                </StackPanel>
+            </GroupBox>
+
+            <!-- Kernel Selection -->
+            <GroupBox Header="Kernel Options" Margin="0,0,0,10">
+                <StackPanel>
+                    <ComboBox Margin="5"
+                              ItemsSource="{Binding KernelPresets}"
+                              SelectedItem="{Binding SelectedKernelPreset, Mode=TwoWay}" />
+                    <TextBlock Text="Or enter custom 3x3 kernel:" Margin="5,10,5,0"/>
+                    <UniformGrid Columns="3" Rows="3" Margin="5">
+                        <TextBox Text="{Binding CustomKernel[0]}" Width="50" />
+                        <TextBox Text="{Binding CustomKernel[1]}" Width="50" />
+                        <TextBox Text="{Binding CustomKernel[2]}" Width="50" />
+                        <TextBox Text="{Binding CustomKernel[3]}" Width="50" />
+                        <TextBox Text="{Binding CustomKernel[4]}" Width="50" />
+                        <TextBox Text="{Binding CustomKernel[5]}" Width="50" />
+                        <TextBox Text="{Binding CustomKernel[6]}" Width="50" />
+                        <TextBox Text="{Binding CustomKernel[7]}" Width="50" />
+                        <TextBox Text="{Binding CustomKernel[8]}" Width="50" />
+                    </UniformGrid>
+                </StackPanel>
+            </GroupBox>
+
+            <!-- Action Buttons -->
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" Margin="0,10,0,0">
+                <Button Content="Load Image" Margin="0,0,0,5" Command="{Binding LoadImageCommand}" />
+                <Button Content="Process" Margin="0,0,0,5" Command="{Binding ProcessImageCommand}" />
+                <Button Content="Export Image" Command="{Binding ExportImageCommand}" />
+            </StackPanel>
+            
+        </StackPanel>
         
     </Grid>
 </Window>
