--- a/App.xaml
+++ b/App.xaml
@@ -1,9 +1,7 @@
 ﻿<Application x:Class="ConvolutionImageProcessing.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ConvolutionImageProcessing"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Views/ImageProcessorView.xaml">
     <Application.Resources>
-         
     </Application.Resources>
 </Application>
