--- a/Views/ImageProcessorView.xaml
+++ b/Views/ImageProcessorView.xaml
@@ -14,10 +14,10 @@
         <!-- Left Column: Images -->
         <StackPanel Grid.Column="0" Margin="10" VerticalAlignment="Stretch">
             <GroupBox Header="Selected Image" Margin="0,0,0,10">
-                <Image Height="250" Stretch="Uniform" Source="{Binding SelectedImage}" />
+                <Image Height="250" Stretch="Uniform" Source="{Binding DisplayImage}" />
             </GroupBox>
-            <GroupBox Header="Live Preview" Margin="0,0,0,10">
-                <Image Height="250" Stretch="Uniform" Source="{Binding LivePreview}" />
+            <GroupBox Header="Result Image" Margin="0,0,0,10">
+                <Image Height="250" Stretch="Uniform" Source="{Binding ResultDisplayImage}" />
             </GroupBox>
         </StackPanel>
 
@@ -25,31 +25,19 @@
         <StackPanel Grid.Column="1" Margin="10" VerticalAlignment="Top" HorizontalAlignment="Stretch">
 
             <!-- Processing Mode -->
-            <GroupBox Header="Processing Mode" Margin="0,0,0,10">
+            <!--<GroupBox Header="Processing Mode" Margin="0,0,0,10">
                 <StackPanel Orientation="Vertical" Margin="5">
                     <RadioButton Content="CPU" GroupName="ProcessingMode" IsChecked="{Binding IsCpuMode, Mode=TwoWay}" />
                     <RadioButton Content="CUDA" GroupName="ProcessingMode" IsChecked="{Binding IsCudaMode, Mode=TwoWay}" />
                 </StackPanel>
-            </GroupBox>
+            </GroupBox>-->
 
             <!-- Kernel Selection -->
             <GroupBox Header="Kernel Options" Margin="0,0,0,10">
                 <StackPanel>
                     <ComboBox Margin="5"
-                              ItemsSource="{Binding KernelPresets}"
-                              SelectedItem="{Binding SelectedKernelPreset, Mode=TwoWay}" />
-                    <TextBlock Text="Or enter custom 3x3 kernel:" Margin="5,10,5,0"/>
-                    <UniformGrid Columns="3" Rows="3" Margin="5">
-                        <TextBox Text="{Binding CustomKernel[0]}" Width="50" />
-                        <TextBox Text="{Binding CustomKernel[1]}" Width="50" />
-                        <TextBox Text="{Binding CustomKernel[2]}" Width="50" />
-                        <TextBox Text="{Binding CustomKernel[3]}" Width="50" />
-                        <TextBox Text="{Binding CustomKernel[4]}" Width="50" />
-                        <TextBox Text="{Binding CustomKernel[5]}" Width="50" />
-                        <TextBox Text="{Binding CustomKernel[6]}" Width="50" />
-                        <TextBox Text="{Binding CustomKernel[7]}" Width="50" />
-                        <TextBox Text="{Binding CustomKernel[8]}" Width="50" />
-                    </UniformGrid>
+                          ItemsSource="{Binding KernelPresetsList}"
+                          SelectedItem="{Binding SelectedKernelPreset, Mode=TwoWay}" />
                 </StackPanel>
             </GroupBox>
 
@@ -57,7 +45,7 @@
             <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" Margin="0,10,0,0">
                 <Button Content="Load Image" Margin="0,0,0,5" Command="{Binding LoadImageCommand}" />
                 <Button Content="Process" Margin="0,0,0,5" Command="{Binding ProcessImageCommand}" />
-                <Button Content="Export Image" Command="{Binding ExportImageCommand}" />
+                <Button Content="Save Image" Command="{Binding SaveImageCommand}" />
             </StackPanel>
             
         </StackPanel>
