--- a/Views/ImageProcessorView.xaml
+++ b/Views/ImageProcessorView.xaml
@@ -3,12 +3,19 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:ConvolutionImageProcessing.Resources"
         mc:Ignorable="d"
         Title="ImageProcessorView" Height="600" Width="1000">
+
+    <Window.Resources>
+        <local:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+        <local:InverseBoolConverter x:Key="InverseBoolConverter" />
+    </Window.Resources>
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*" />
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
         <!-- Left Column: Images -->
@@ -22,33 +29,31 @@
         </StackPanel>
 
         <!-- Right Column: Controls -->
-        <StackPanel Grid.Column="1" Margin="10" VerticalAlignment="Top" HorizontalAlignment="Stretch">
-
-            <!-- Processing Mode -->
-            <!--<GroupBox Header="Processing Mode" Margin="0,0,0,10">
-                <StackPanel Orientation="Vertical" Margin="5">
-                    <RadioButton Content="CPU" GroupName="ProcessingMode" IsChecked="{Binding IsCpuMode, Mode=TwoWay}" />
-                    <RadioButton Content="CUDA" GroupName="ProcessingMode" IsChecked="{Binding IsCudaMode, Mode=TwoWay}" />
-                </StackPanel>
-            </GroupBox>-->
-
+        <StackPanel Grid.Column="1" Margin="10" VerticalAlignment="Top" HorizontalAlignment="Stretch"
+                    IsEnabled="{Binding IsProcessing, Converter={StaticResource InverseBoolConverter}}">
             <!-- Kernel Selection -->
             <GroupBox Header="Kernel Options" Margin="0,0,0,10">
                 <StackPanel>
                     <ComboBox Margin="5"
-                          ItemsSource="{Binding KernelPresetsList}"
-                          SelectedItem="{Binding SelectedKernelPreset, Mode=TwoWay}" />
+                              ItemsSource="{Binding KernelPresetsList}"
+                              SelectedItem="{Binding SelectedKernelPreset, Mode=TwoWay}" />
                 </StackPanel>
             </GroupBox>
 
             <!-- Action Buttons -->
             <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" Margin="0,10,0,0">
-                <Button Content="Load Image" Margin="0,0,0,5" Command="{Binding LoadImageCommand}" />
-                <Button Content="Process" Margin="0,0,0,5" Command="{Binding ProcessImageCommand}" />
-                <Button Content="Save Image" Command="{Binding SaveImageCommand}" />
+                <Button Content="Load Image" Margin="0,0,0,5" Command="{Binding LoadImageCommand}" 
+                        IsEnabled="{Binding IsProcessing, Converter={StaticResource InverseBoolConverter}}" />
+                <Button Content="Process" Margin="0,0,0,5" Command="{Binding ProcessImageCommand}" 
+                        IsEnabled="{Binding IsProcessing, Converter={StaticResource InverseBoolConverter}}" />
+                <Button Content="Save Image" Command="{Binding SaveImageCommand}" 
+                        IsEnabled="{Binding IsProcessing, Converter={StaticResource InverseBoolConverter}}" />
             </StackPanel>
-            
         </StackPanel>
-        
+
+        <!-- Processing overlay blocking entire window -->
+        <Grid Background="#80000000" Visibility="{Binding IsProcessing, Converter={StaticResource BoolToVisibilityConverter}}" IsHitTestVisible="True">
+            <TextBlock Text="Processing..." Foreground="White" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        </Grid>
     </Grid>
 </Window>
